tests/ui/destructuring-assignment/slice_destructure_fail.stderr
error: `..` can only be used once per slice pattern
  --> $DIR/slice_destructure_fail.rs:3:16
   |
LL |     [a, .., b, ..] = [0, 1];
   |         --     ^^ can only be used once per slice pattern
   |         |
   |         previously used here

error[E0308]: mismatched types
  --> $DIR/slice_destructure_fail.rs:4:5
   |
LL |     [a, a, b] = [1, 2];
   |     ^^^^^^^^^ expected an array with a fixed size of 2 elements, found one with 3 elements
   |
   = note: expected array `[{integer}; 2]`
              found array `[_; 3]`

error[E0527]: pattern requires 3 elements but array has 2
  --> $DIR/slice_destructure_fail.rs:4:5
   |
LL |     [a, a, b] = [1, 2];
   |     ^^^^^^^^^ expected 2 elements

error[E0308]: mismatched types
  --> $DIR/slice_destructure_fail.rs:7:5
   |
LL |     [_] = [1, 2];
   |     ^^^ expected an array with a fixed size of 2 elements, found one with 1 element
   |
   = note: expected array `[{integer}; 2]`
              found array `[_; 1]`

error[E0527]: pattern requires 1 element but array has 2
  --> $DIR/slice_destructure_fail.rs:7:5
   |
LL |     [_] = [1, 2];
   |     ^^^ expected 2 elements

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0308, E0527.
For more information about an error, try `rustc --explain E0308`.
